src/test/deca/syntax/invalid/objet/ClassWithMethodButNoReturn.deca
class A{
    int x;
    int getX(){
    }
}

{
    A a = new getX;
}